anche acquirenti uniti dentro utentirepo